# Smol_pong

./: .clang-format  .gitignore  README.md  license  meson.build  run.sh
src/: global.h  macros.h  main.c
src/core/: aabb.h  input.c  input.h  move.c  move.h  render.c  tick.c  tick.h
